Fix time contrast in notifications dropdown

--- a/app/assets/stylesheets/hera/modules/_notifications.scss
+++ b/app/assets/stylesheets/hera/modules/_notifications.scss
@@ -114,6 +114,10 @@
 
           .body {
             white-space: initial;
+
+            .time {
+              color: $grey-700;
+            }
           }
 
           &:last-child {
